src/tests/snapshots/swayward__tests__window_opening__check_target_size@fsT-omT-dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized true\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1248 × 344, bounds: 1248 × 688, states: []
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
